--- a/templates/home.html
+++ b/templates/home.html
@@ -58,15 +58,20 @@
 
       <aside class="col-md-4 blog-sidebar">
         <div class="p-3 mb-3 bg-light rounded">
-          <h4 class="font-italic">About</h4>
-          <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+          
+          <h4 class="font-italic">{{abouted.about}}</h4>
+          <p class="mb-0">{{abouted.about_description}}</p>
+  
         </div>
 
         <div class="p-3">
           <h4 class="font-italic">Follow Us</h4>
           <ol class="list-unstyled">
-            <li><a href="#">GitHub</a></li>
-            <li><a href="#">LinkedIn</a></li>
+            {% if social %}
+            {% for i in social %}
+            <li><a href="{{ i.link }}" target="_blank">{{i.platform}}</a></li>
+            {% endfor %}
+            {% endif %}
           </ol>
         </div>
       </aside><!-- /.blog-sidebar -->
