--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link href="{% static 'css/blog.css' %}" rel="stylesheet">
 </head>
 <body>
@@ -22,8 +23,8 @@
                 <!-- <div class="card-body"> -->
                   <form action="{% url 'search' %}" method="GET">
                     <div class="input-group">
-                      <input class="form-control" name="keyboard" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
-                      <button type="submit" class="btn btn-warning" id="button-search" type="button">Go!</button>
+                      <input class="form-control" name="keyword" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
+                      <button type="submit" class="btn btn-warning" id="button-search">Go!</button>
                   </div>
                   </form>
                     
@@ -37,6 +38,8 @@
               {% else %}
               <span>Your Logged in as {{user}}</span>
               
+               &emsp;
+               <span><a href="{% url 'dashboard' %}">Dashboard</a></span>
                &emsp;
               <span><a href="{% url 'log' %}">Logout</a></span>
               {% endif %}
