--- a/templates/dashboard/sidebar.html
+++ b/templates/dashboard/sidebar.html
@@ -2,7 +2,7 @@
     <div class="nav flex-column nav-pills bg-light" aria-orientation="vertical">
         <a href="{% url 'dashboard' %}" class="nav-link text-dark {% if '/dashboard/' == request.path %} bg-warning {% endif %}">Dashboard</a>
         <a href="{% url 'category' %}" class="nav-link text-dark">Category</a>
-        <a href="" class="nav-link text-dark">Posts</a>
+        <a href="{% url 'post' %}" class="nav-link text-dark">Posts</a>
         <a href="" class="nav-link text-dark">Logout</a>
     </div>
  </div>
