--- a/templates/dashboard/sidebar.html
+++ b/templates/dashboard/sidebar.html
@@ -1,8 +1,15 @@
 <div class="col-md-3">
     <div class="nav flex-column nav-pills bg-light" aria-orientation="vertical">
         <a href="{% url 'dashboard' %}" class="nav-link text-dark {% if '/dashboard/' == request.path %} bg-warning {% endif %}">Dashboard</a>
-        <a href="{% url 'category' %}" class="nav-link text-dark">Category</a>
-        <a href="{% url 'post' %}" class="nav-link text-dark">Posts</a>
-        <a href="" class="nav-link text-dark">Logout</a>
+        <a href="{% url 'category' %}" class="nav-link text-dark {% if '/category/' in request.path %} bg-warning {% endif %}">Category</a>
+        <a href="{% url 'post' %}" class="nav-link text-dark {% if '/post/' in request.path %} bg-warning {% endif %}">Posts</a>
+        {% if perms.auth.view_user %}
+        <a href="{% url 'getUser' %}" class="nav-link text-dark {% if '/users/' in request.path %} bg-warning {% endif %}">User</a>
+        {% endif %}
+        <a href="{% url 'log' %}" 
+        onclick="if (confirm('Are you sure you want to logout?')) { this.style.backgroundColor = 'red'; }" 
+        class="nav-link text-dark">
+        Logout
+     </a>
     </div>
  </div>
