--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
         <header class="blog-header py-3">
           <div class="row flex-nowrap justify-content-between align-items-center">
             <div class="col-4 pt-1">
-              <a class="blog-header-logo text-dark" href="/">Django Blog</a>
+              <a class="blog-header-logo text-dark" href="/">BlogVerse</a>
             </div>
             <form action="">
               <div class="card">
