--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BlogVerse</title>
     <link href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
@@ -17,20 +17,15 @@
             <div class="col-4 pt-1">
               <a class="blog-header-logo text-dark" href="/">BlogVerse</a>
             </div>
-            <form action="">
-              <div class="card">
-                <!-- <div class="card-header">Search</div> -->
-                <!-- <div class="card-body"> -->
-                  <form action="{% url 'search' %}" method="GET">
-                    <div class="input-group">
-                      <input class="form-control" name="keyword" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
-                      <button type="submit" class="btn btn-warning" id="button-search">Go!</button>
-                  </div>
-                  </form>
-                    
-                <!-- </div> -->
+            <div class="col-4">
+              <form action="{% url 'search' %}" method="GET">
+                <div class="input-group">
+                  <input class="form-control" type="text" name="keyword" value="{{ keyword }}" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
+                  <button type="submit" class="btn btn-warning" id="button-search" type="button">Go!</button>
+              </div>
+              </form>
             </div>
-          </form>
+
             <div class="col-4 d-flex justify-content-end align-items-center">
               {% if not user.is_authenticated %}
               <a class="btn btn-sm btn-warning" href="{% url 'login' %}">Login</a> &nbsp;
