--- a/templates/search.html
+++ b/templates/search.html
@@ -1,11 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Sear</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+
+<h3 class="text-warning" style="letter-spacing: 2px;">Search Term - {{ keyword }}</h3>
+<div class="row mb-2">
+  {% if blogs %}
+  {% for i in blogs %}
+  <div class="col-md-6">
+    <div class="card border-0" >
+      <div class="card-body">
+        <h3><a href="{% url 'blogs' i.slug  %}" class="text-dark">{{ i.title }}</a></h3>
+        <small class="mb-1 text-muted">{{ i.created_at | timesince }} ago | {{ i.author }}</small>
+        <p class="card-text">{{ i.short_description | truncatewords:25 }}</p>
+      </div>
+    </div>
+  </div>
+  {% endfor %}
+  {% else %}
+  <p>No posts found</p>
+  {% endif %}
+  
+</div>
+
+{% endblock %}
