final commit project completed

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
         {% endblock %}
         
         <footer class="blog-footer">
-            <p>Django blog built with 💖 by <a href="#">Aditya Rawat</a></p>
+            <p>Django blog built with 💖 by <a href="{% url 'email' %}">Aditya Rawat</a></p>
           </footer>
 </body>
 </html>
